# AIS_object_detection_and_avoidance

./: Dockerfile  README.md
install/obstacle_avoidance_tb3/lib/obstacle_avoidance_tb3/: obstacle_avoidance.py
install/obstacle_avoidance_tb3/share/obstacle_avoidance_tb3/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/obstacle_avoidance_tb3/share/obstacle_avoidance_tb3/cmake/: obstacle_avoidance_tb3Config.cmake
log/: latest_build
src/obstacle_avoidance_tb3/: CMakeLists.txt  package.xml  setup.py
src/obstacle_avoidance_tb3/config/: dwa_config.yaml
src/obstacle_avoidance_tb3/launch/: navigation.launch.py
src/obstacle_avoidance_tb3/scripts/: your_node.cpp  your_node.py
src/obstacle_avoidance_tb3/src/: laser_scan.launch.py  your_node.cpp
