<?xml version="1.0"?>
<package format="3">
<exec_depend>rclpy</exec_depend>
<exec_depend>geometry_msgs</exec_depend>

  <name>obstacle_avoidance_tb3</name>
  <version>0.0.1</version>
  <description>Obstacle avoidance package for TurtleBot3</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>




